--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "d3": "^4.1.1",
+    "date-fns": "^2.29.1",
+    "firebase": "^9.9.2",
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
